# HolySheet

./: CMakeLists.txt  README.md  icon.rc  main.cpp  resources.qrc
include/: Cell.h  HolySheet.h  MainWindow.h  calc.h  findDialog.h  goToCellDialog.h  linStack.h  sortDialog.h
src/: Cell.cpp  HolySheet.cpp  MainWindow.cpp  calc.cpp  findDialog.cpp  goToCellDialog.cpp  sortDialog.cpp
ui/: goToCellDialog.ui  sortDialog.ui
